--- a/webroot/style.css
+++ b/webroot/style.css
@@ -15,11 +15,54 @@ body {
 }
 #game-container {
   max-width: 800px;
-  margin: 60px auto 0; /* Add top margin to account for stats bar */
+  margin: auto 0;
+
   display: flex;
   flex-direction: column;
   height: calc(100vh - 100px); /* Adjust height to account for stats bar */
   overflow: hidden;
+}
+#timer {
+  position: absolute;
+  top: 45px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 18px;
+  color: white;
+  text-align: center;
+}
+#loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #333;
+  border-top: 5px solid #fff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+.loading-text {
+  color: white;
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 /* Stats Section */
@@ -67,19 +110,19 @@ body {
 #maze-grid {
   display: grid;
   gap: 1px;
-  /* background: #2d2d2d; */
   padding: 10px;
   border-radius: 8px;
-  margin-bottom: 20px;
+  margin-top: 25px;
+  /* margin-bottom: 20px; */
   overflow: hidden;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 /* Cell Styles */
 .cell {
   width: 40px;
   height: 40px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   cursor: pointer;
   transition: all 0.3s ease;
   display: flex;
