--- a/webroot/style.css
+++ b/webroot/style.css
@@ -93,7 +93,7 @@ body {
 }
 
 .heart-icon {
-  font-size: 20px;
+  font-size: 10px;
   transition: all 0.3s ease;
 }
 
@@ -223,14 +223,14 @@ body {
 
 /* Maze Grid */
 #maze-grid {
+  position: relative;
   display: grid;
   gap: 1px;
   padding: 10px;
   border-radius: 8px;
   margin-top: 25px;
-  /* margin-bottom: 20px; */
   overflow: hidden;
-  /* margin: 0 auto; */
+  transition: transform 0.1s linear;
 }
 
 /* Cell Styles */
@@ -670,7 +670,7 @@ body {
   text-align: center;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  z-index: 10;
+  z-index: 100;
   display: none; /* Hidden by default */
 }
 #message div {
