--- a/webroot/style.css
+++ b/webroot/style.css
@@ -438,6 +438,7 @@ body {
   z-index: 1000;
 }
 .door {
+  /* background: #FF4500; */
   background: #594a00;
   position: relative;
 }
@@ -448,6 +449,7 @@ body {
 }
 .door-piece {
   position: absolute;
+  /* background: #FF4500; */ 
   background: #594a00;
   transition: transform 0.5s ease, opacity 0.5s ease;
   border: 1px solid rgba(0, 0, 0, 0.2);
