--- a/webroot/style.css
+++ b/webroot/style.css
@@ -619,13 +619,26 @@ body {
   position: absolute;
   width: 40px;
   height: 40px;
+  pointer-events: none;
+  z-index: 1000;
 }
-.door-piece {
+/* .door-animation {
   position: absolute;
-  /* background: #FF4500; */ 
+  width: 40px;
+  height: 40px;
+} */
+/* .door-piece {
+  position: absolute;
+  background: #FF4500; 
   background: #594a00;
   transition: transform 0.5s ease, opacity 0.5s ease;
   border: 1px solid rgba(0, 0, 0, 0.2);
+} */
+.door-piece {
+  position: absolute;
+  background: #1aa5ec;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  transition: transform 0.5s ease, opacity 0.5s ease;
 }
 .vertical .door-piece.top {
   width: 100%;
