--- a/webroot/style.css
+++ b/webroot/style.css
@@ -656,8 +656,28 @@ body {
 }
 .door {
   /* background: #FF4500; */
-  background: #594a00;
+  background: #4b3515;
   position: relative;
+}
+/* Door cracks */
+.door::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.door.cracked1::after {
+  background-image: var(--door-crack1-url);
+}
+
+.door.cracked2::after {
+  background-image: var(--door-crack2-url);
 }
 .door-animation {
   position: absolute;
